--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ html {
 	width: 40em;
 	height: 30em;
 	background-color: black;
+	background-image: url("media/autumn-forest.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 	position: relative;
 	/* must be relative so that child percentages work,
 	for "containing block" reasons */
@@ -65,6 +69,50 @@ summary > div {
 	display: inline-block;
 }
 
+div.profile {
+	position: absolute;
+	left: 0;
+	top: -1.5em;
+}
+
+div.profile:has(.portrait) {
+	top: -5em;
+}
+
+div.portrait {
+	height: 5em;
+	width: 5em;
+	background-color: gray;
+	display: inline-block;
+}
+
+div.name {
+	background-color: #740;
+	color: white;
+	font-size: 1.5em;
+	display: inline-block;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+}
+
+div.profile.vriska {
+	top: -238px;
+	left: -30px;
+}
+
+.vriska > .portrait {
+	height: 238px;
+	width: 187px;
+	background-color: unset;
+	background-image: url("media/vriska-idle.gif");
+}
+
+.vriska > .name {
+	background-color: #005682;
+	position: relative;
+	left: -30px;
+}
+
 span {
 	overflow: hidden;
 	white-space: nowrap;
@@ -88,18 +136,23 @@ summary:focus > div > span.dialogue {
 }
 
 summary:focus > div > .s1 {
-	transition-duration: 0.5s;
+	transition-duration: 0.25s;
 }
 
 summary:focus > div > .s2 {
-	transition-duration: 0.95s;
+	transition-duration: 0.975s;
 }
 
 summary:focus > div > .s3.line1 {
-	transition-duration: 2.55s;
+	transition-duration: 0.9s;
 }
 
 summary:focus > div > .s3.line2 {
-	transition-duration: 1.75s;
-	transition-delay: 2.55s;
+	transition-duration: 1.225s;
+	transition-delay: 0.9s;
+}
+
+summary:focus > div > .s3.line3 {
+	transition-duration: 0.3s;
+	transition-delay: 2.125s;
 }
